[package]
name = "youtube-downloader"
version = "0.1.0"
authors = ["smoqadam <phpro.ir@gmail.com>"]

[dependencies]
hyper="0.10.8"
hyper-native-tls="0.2.2"
pbr = "1.0.0-alpha.3"
clap="2.23.2"
regex="0.2.1"
log = "0.3"
stderrlog = "0.2"
serde_derive = "1.0"
serde = "1.0"
serde_urlencoded = "0.5.1"
url = "1.0"

[dev-dependencies]
reqwest = "0.8"

[[bin]]
name = "youtube-downloader"
path = "src/main.rs"
